// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`profilePageReducer handles the change time frame action 1`] = `
Immutable.Map {
  "loading": false,
  "error": false,
  "balance": false,
  "positions": false,
  "totalInvested": false,
  "chart": false,
  "timeFrame": 1,
  "transferAmount": 0,
}
`;

exports[`profilePageReducer handles the change time transfer amount action 1`] = `
Immutable.Map {
  "loading": false,
  "error": false,
  "balance": false,
  "positions": false,
  "totalInvested": false,
  "chart": false,
  "timeFrame": 0,
  "transferAmount": 100,
}
`;

exports[`profilePageReducer handles the load balance action 1`] = `
Immutable.Map {
  "loading": true,
  "error": false,
  "balance": false,
  "positions": false,
  "totalInvested": false,
  "chart": false,
  "timeFrame": 0,
  "transferAmount": 0,
}
`;

exports[`profilePageReducer handles the load chart action 1`] = `
Immutable.Map {
  "loading": true,
  "error": false,
  "balance": false,
  "positions": false,
  "totalInvested": false,
  "chart": false,
  "timeFrame": 0,
  "transferAmount": 0,
}
`;

exports[`profilePageReducer handles the load positions action 1`] = `
Immutable.Map {
  "loading": true,
  "error": false,
  "balance": false,
  "positions": false,
  "totalInvested": false,
  "chart": false,
  "timeFrame": 0,
  "transferAmount": 0,
}
`;

exports[`profilePageReducer handles the request transfer action 1`] = `
Immutable.Map {
  "loading": true,
  "error": false,
  "balance": false,
  "positions": false,
  "totalInvested": false,
  "chart": false,
  "timeFrame": 0,
  "transferAmount": 0,
}
`;

exports[`profilePageReducer returns the initial state 1`] = `
Immutable.Map {
  "loading": false,
  "error": false,
  "balance": false,
  "positions": false,
  "chart": false,
  "totalInvested": false,
  "timeFrame": 0,
  "transferAmount": 0,
}
`;
